# ebpf-php-leak-detector

./: Cargo.toml  README.md
php-leak-detector/: Cargo.toml  build.rs
php-leak-detector-common/: Cargo.toml
php-leak-detector-ebpf/: Cargo.toml
php-leak-detector-ebpf/src/: main.rs
php-leak-detector/src/: main.rs
test/: config.m4  php_leak_test.c  php_leak_test.h
