[package]
name = "php-leak-detector-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
php-leak-detector-common = { path = "../php-leak-detector-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "php-leak-detector"
path = "src/main.rs"
